<resources>
    <string name="app_name">Brechó Livre</string>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Pesquisar</string>


    <string name="drawer_vitrine">Vitrine</string>
    <string name="drawer_my_products">Meus produtos</string>
    <string name="drawer_meus_interesses">Meus interesses</string>
    <string name="drawer_settings">Configurações</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_help">Termos de uso e ajuda</string>
    <string name="nav_setttings_title">Configurações</string>
    <string name="title_activity_dashboard">Brechó Livre</string>
    <string name="title_activity_product">ProductActivity</string>
</resources>
