<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vitrine"
            android:icon="@drawable/ic_store_24dp"
            android:title="@string/drawer_vitrine" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_shopping_basket_24dp"
            android:title="@string/drawer_my_products" />
        <item
            android:id="@+id/nav_meus_interesses"
            android:icon="@drawable/ic_star_rate_24dp"
            android:title="@string/drawer_meus_interesses" />
    </group>

    <item android:checkableBehavior="single" android:title="@string/nav_setttings_title">
        <menu>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_announcement_24dp"
            android:title="@string/drawer_feedback" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/drawer_help" />
        </menu>
    </item>



</menu>
